# squirrelang

c/: CMakeLists.txt  README.md  test
c/include/: chunk.h  common.h  compiler.h  debug.h  memory.h  scanner.h  value.h  vm.h
c/src/: chunk.c  compiler.c  debug.c  main.c  scanner.c  value.c  vm.c
java/: .gitignore  .project  README.md  settings.gradle.kts
java/app/: .classpath  .project  build.gradle.kts
java/app/src/main/java/org/scarp/: Parser.java  Scanner.java  TokenType.java
java/app/src/main/java/org/squirrelang/: AstPrinter.java  Break.java  Environment.java  Expr.java  Interpreter.java  Modifiers.java  Parser.java  Resolver.java  Return.java  ReversePolishAstPrinter.java  RuntimeError.java  Scanner.java  SqCallable.java  SqClass.java  SqFunction.java  SqInstance.java  Squirrelang.java  Stmt.java  Token.java  TokenType.java
java/app/src/test/java/org/squirrelang/: SquirrelangTest.java
java/app/tool/: GenerateAst.java
